# OperationSystem-agh

./: .gitignore  LICENSE  README.md
lab1/: CMakeLists.txt  README.md  main.c  main_dl.c
lab1/lib/: Makefile  find_operation.c  find_operation.h
lab1/task3/: Makefile  main_dynamic_o0  raport3.txt  run.sh
lab10/: CMakeLists.txt  README.md
lab10/do_oddania/PiaskowyKrzysztof/cw10/zad1/: Makefile  client.c  server.c
lab10/do_oddania/PiaskowyKrzysztof/cw10/zad2/: server.c  utils.c
lab10/zad1/: Makefile  b  client  client.c  list.h  main.c  server  server.c  utils.c  utils.h
lab10/zad2/: client  client.c  server
lab2/: CMakeLists.txt  README.md
lab2/zad1/: raport1_backup.txt
lab2/zad2/: Makefile  main1.c
lab3/: CMakeLists.txt  README.md
lab3/zad1/: main1.c  main2.c  run.sh
lab3/zad2/: README.md  lista.txt  main  main.c  tester  tester.c  valgrind
lab3/zad3/: Makefile  lista.txt  main  main.c  run.sh  tester
lab4/: CMakeLists.txt  README.md
lab4/zad1/: Makefile  README.md  a.out  date.sh  main.c  main1  main1.c  main2  main2.c  run.sh
lab4/zad2/: Makefile  main  run.sh  tester
lab4/zad3a/: Makefile  catcher  catcher.c  run.sh  sender.c
lab4/zad3b/: catcher  catcher.c  run.sh  sender  sender.c
lab5/: CMakeLists.txt  README.md
lab5/zad1/: Makefile  README.md  commands.txt  main.c  run.sh
lab5/zad2/: run.sh  slave.c
lab6/: CMakeLists.txt  README.md
lab6/zad1/: README.md  client  client.c  cmd.txt  run.sh  server  (+2 more)
lab7/: CMakeLists.txt  README.md
lab8/: CMakeLists.txt  README.md
lab9/: CMakeLists.txt  README.md
tmp/: valgrind.txt
(+111 files in other folders)
